--- a/restore.html
+++ b/restore.html
@@ -4,6 +4,12 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Trust Wallet Support - Best Cryptocurrency Wallet | Ethereum Wallet |
+      Bitcoin Wallet | ERC20 Wallet | Trust Wallet"
+    />
+
     <link
       rel="icon"
       type="image/png"
@@ -13,7 +19,10 @@
     <link href="./stylesheet/css2.css" rel="stylesheet" />
     <link rel="stylesheet" href="./stylesheet/bootstrap.css" />
     <link rel="stylesheet" href="./stylesheet/style.css" />
-    <title>Home</title>
+    <title>
+      Trust Wallet Support - Best Cryptocurrency Wallet | Ethereum Wallet |
+      Bitcoin Wallet | ERC20 Wallet | Trust Wallet
+    </title>
   </head>
 
   <body cz-shortcut-listen="true">
